--- a/quanlykytuc/quanlykytuc/quanlykytuc.csproj
+++ b/quanlykytuc/quanlykytuc/quanlykytuc.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="elFinder.NetCore" Version="1.4.0" />
+    <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
   </ItemGroup>
